--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+## SERVER PORT
+server.port = 9091
 
+## Maria DB
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/mytest
+spring.datasource.username=root
+spring.datasource.password=root
+
+## JPA
+spring.jpa.show-sql=true
+
+## Thymeleaf cache
+spring.thymeleaf.cache=false
+
+## redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
+## redis session
+spring.session.store-type=redis
+server.servlet.session.timeout=60
+spring.session.redis.namespace=spring:session
