--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 9091
 
 ## Maria DB
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/mytest
+spring.datasource.url=jdbc:mariadb://localhost:3306/cwpark
 spring.datasource.username=root
 spring.datasource.password=root
 
