--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.thymeleaf.cache=false
 ## redis
 spring.redis.host=localhost
 spring.redis.port=6379
+spring.data.redis.repositories.enabled = false
 
 ## redis session
 spring.session.store-type=redis
